fixed layout bug for other skins

--- a/ContextualPopupDecorator/ContextualPopup.module.less
+++ b/ContextualPopupDecorator/ContextualPopup.module.less
@@ -72,6 +72,7 @@
 				.focus({
 					.bg {
 						border-color: @agate-contextual-popup-close-button-border-color;
+						background-color: @agate-contextual-popup-close-button-focus-bg-color;
 					}
 				});
 
