--- a/styles/colors-base.less
+++ b/styles/colors-base.less
@@ -154,9 +154,10 @@
 
 // ContextualPopup
 // ---------------------------------------
-@agate-contextual-popup-bg-color:                   inherit;
-@agate-contextual-popup-close-button-border-color:  inherit;
-@agate-contextual-popup-color:                      inherit;
+@agate-contextual-popup-bg-color:                    @agate-accent;
+@agate-contextual-popup-close-button-border-color:   inherit;
+@agate-contextual-popup-color:                       @agate-white;
+@agate-contextual-popup-close-button-focus-bg-color: transparent;
 
 // DateTimePicker
 // ---------------------------------------
