--- a/styles/colors-gallium-day.less
+++ b/styles/colors-gallium-day.less
@@ -84,7 +84,6 @@
 // ---------------------------------------
 @agate-contextual-popup-bg-color:                   @agate-accent;
 @agate-contextual-popup-close-button-border-color:  transparent;
-@agate-contextual-popup-color:                      @agate-white;
 
 // DateTimePicker
 // ---------------------------------------
