--- a/styles/variables-base.less
+++ b/styles/variables-base.less
@@ -194,14 +194,14 @@
 // ---------------------------------------
 @agate-contextual-popup-arrow-height:        30px;
 @agate-contextual-popup-arrow-width:         30px;
-@agate-contextual-popup-border-radius:       inherit;
+@agate-contextual-popup-border-radius:       36px;
 @agate-contextual-popup-close-button-height: @agate-button-small-height;
 @agate-contextual-popup-font-size:           inherit;
 @agate-contextual-popup-font-weight:         inherit;
 @agate-contextual-popup-offset-overlap:      18px;
 @agate-contextual-popup-offset-small:        9px;
-@agate-contextual-popup-padding-horizontal:  inherit;
-@agate-contextual-popup-padding-vertical:    inherit;
+@agate-contextual-popup-padding-horizontal:  30px;
+@agate-contextual-popup-padding-vertical:    18px;
 @agate-contextual-popup-padding:             @agate-contextual-popup-padding-vertical @agate-contextual-popup-padding-horizontal;
 
 // DateTimePicker
